--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
+<!doctype html>
+<html lang="fr" x-data="app()">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sélecteur Cisco — Starter</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+</head>
+<body class="bg-slate-900 text-slate-100">
+  <header class="sticky top-0 z-10 border-b border-slate-800 bg-slate-950/80 backdrop-blur px-4 py-3">
+    <div class="max-w-6xl mx-auto flex items-center justify-between">
+      <h1 class="text-base font-semibold">Sélecteur Cisco — Starter</h1>
+      <div class="text-xs text-slate-400">GitHub Pages</div>
+    </div>
+  </header>
 
+  <main class="max-w-6xl mx-auto p-4 grid md:grid-cols-[320px,1fr] gap-4">
+    <aside class="bg-slate-950 border border-slate-800 rounded-xl p-4 space-y-3">
+      <h2 class="text-sm font-semibold text-sky-300">Filtres</h2>
+      <div>
+        <label class="text-xs text-slate-400">Famille</label>
+        <select x-model="filters.family" @change="apply()" class="w-full mt-1 rounded-lg bg-slate-900 border border-slate-700 px-2 py-2 text-sm">
+          <option value="">Toutes</option>
+          <option value="Catalyst">Catalyst</option>
+          <option value="Meraki">Meraki</option>
+          <option value="Small Business">Small Business</option>
+        </select>
+      </div>
+      <div>
+        <label class="text-xs text-slate-400">Nombre de ports (min): <span x-text="filters.portsMin + '+'"></span></label>
+        <input type="range" min="0" max="96" step="1" x-model.number="filters.portsMin" @input="apply()" class="w-full mt-1">
+      </div>
+      <div class="flex items-center gap-2">
+        <input id="poe" type="checkbox" x-model="filters.poeOnly" @change="apply()" class="rounded">
+        <label for="poe" class="text-sm text-slate-300">Uniquement PoE</label>
+      </div>
+      <div>
+        <label class="text-xs text-slate-400">Uplinks</label>
+        <select x-model="filters.uplink" @change="apply()" class="w-full mt-1 rounded-lg bg-slate-900 border border-slate-700 px-2 py-2 text-sm">
+          <option value="">Tous</option>
+          <option value="SFP">SFP (1G)</option>
+          <option value="SFP+">SFP+ (10G)</option>
+          <option value="QSFP28">QSFP28 (40/100G)</option>
+        </select>
+      </div>
+      <div>
+        <label class="text-xs text-slate-400">OS</label>
+        <select x-model="filters.os" @change="apply()" class="w-full mt-1 rounded-lg bg-slate-900 border border-slate-700 px-2 py-2 text-sm">
+          <option value="">Tous</option>
+          <option>IOS-XE</option>
+          <option>Meraki OS</option>
+          <option>Business OS</option>
+        </select>
+      </div>
+      <div>
+        <label class="text-xs text-slate-400">Modèle de licence</label>
+        <select x-model="filters.licenseModel" @change="apply()" class="w-full mt-1 rounded-lg bg-slate-900 border border-slate-700 px-2 py-2 text-sm">
+          <option value="">Tous</option>
+          <option value="meraki_per_device">Meraki — Per-Device</option>
+          <option value="meraki_co_term">Meraki — Co-Term</option>
+          <option value="catalyst_dna">Catalyst — DNA</option>
+          <option value="catalyst_networking">Catalyst — Network E/A</option>
+          <option value="smb_included">Small Business — Inclus</option>
+        </select>
+      </div>
+      <div class="flex gap-2">
+        <button @click="reset()" class="px-3 py-2 text-sm rounded-lg border border-slate-700 bg-slate-900">Réinitialiser</button>
+        <button @click="exportJson()" class="px-3 py-2 text-sm rounded-lg border border-slate-700 bg-slate-900">Exporter JSON</button>
+      </div>
+      <div class="flex items-center gap-2 text-xs text-slate-400">
+        <span x-text="filtered.length"></span> résultat(s)
+      </div>
+      <p class="text-[11px] text-slate-500">Source: <code x-text="DATA_SOURCE"></code></p>
+    </aside>
+
+    <section class="bg-slate-950 border border-slate-800 rounded-xl p-3">
+      <h2 class="text-sm font-semibold text-sky-300 mb-2">Résultats</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
+        <template x-for="p in filtered" :key="p.sku">
+          <article class="bg-slate-900 border border-slate-800 rounded-xl p-3 space-y-2">
+            <h3 class="text-sm font-semibold" x-text="p.name"></h3>
+            <div class="flex flex-wrap gap-2 text-xs">
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="p.family + (p.series ? ' · ' + p.series : '')"></span>
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="p.ports_access + ' ports'"></span>
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="p.poe && p.poe.supported ? ('PoE ' + (p.poe.standard ? p.poe.standard.toUpperCase() : '') + (p.poe.budget_w ? (' · ' + p.poe.budget_w + 'W') : '')) : 'No PoE'"></span>
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="'Uplinks: ' + ((p.uplinks||[]).map(u=> u.count + '×' + u.type).join(', ') || '—')"></span>
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="p.os"></span>
+              <span class="px-2 py-0.5 rounded-full border border-slate-700" x-text="'Lic: ' + (p.licenses?.model || (p.family==='Meraki'?'meraki_per_device':(p.family==='Small Business'?'smb_included':'catalyst_dna')))"></span>
+            </div>
+            <p class="text-[11px] text-slate-500">SKU: <span x-text="p.sku"></span></p>
+          </article>
+        </template>
+        <div x-show="!filtered.length" class="text-sm text-slate-400 p-3">Aucun résultat. Ajustez vos filtres.</div>
+      </div>
+    </section>
+  </main>
+
+  <script>
+  function app(){
+    return {
+      DATA_SOURCE: 'data/products.json',
+      all: [], filtered: [],
+      filters: { family:'', portsMin:0, poeOnly:false, uplink:'', os:'', licenseModel:'' },
+      async init(){
+        try{
+          const res = await fetch(this.DATA_SOURCE, { cache: 'no-store' });
+          this.all = await res.json();
+        }catch(e){
+          this.all = [];
+        }
+        this.apply();
+      },
+      match(p){
+        if(this.filters.family && p.family !== this.filters.family) return false;
+        if((p.ports_access||0) < (this.filters.portsMin||0)) return false;
+        if(this.filters.poeOnly && !(p.poe && p.poe.supported)) return false;
+        if(this.filters.uplink){
+          const types = (p.uplinks||[]).map(u => u.type);
+          if(!types.includes(this.filters.uplink)) return false;
+        }
+        if(this.filters.os && p.os !== this.filters.os) return false;
+        if(this.filters.licenseModel){
+          const model = p.licenses && p.licenses.model;
+          if(model !== this.filters.licenseModel) return false;
+        }
+        return true;
+      },
+      apply(){ this.filtered = this.all.filter(p => this.match(p)); },
+      reset(){ this.filters = { family:'', portsMin:0, poeOnly:false, uplink:'', os:'', licenseModel:'' }; this.apply(); },
+      exportJson(){
+        const blob = new Blob([JSON.stringify(this.filtered, null, 2)], {type:'application/json'});
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a'); a.href = url; a.download = 'selection.json'; a.click();
+        setTimeout(()=> URL.revokeObjectURL(url), 500);
+      }
+    }
+  }
+  </script>
+</body>
+</html>
