--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="text-xs text-slate-400">No‑zero results · GitHub Pages ready</p>
     </div>
   </header>
-
+<div class="text-xs text-lime-400 mb-2">Vue OK ✔</div>
   <main id="app" class="max-w-7xl mx-auto p-4 grid lg:grid-cols-[420px,1fr] gap-4" v-cloak>
     <!-- Filtres -->
     <aside class="bg-slate-950 border border-slate-800 rounded-xl p-4 space-y-5">
@@ -39,19 +39,7 @@
           </div>
         </div>
 
-        <!-- Port type (⚠️ ligne corrigée :key) -->
-        <div>
-          <div class="text-xs text-slate-400 mb-1">Port type</div>
-          <div class="flex flex-col gap-1 text-sm">
-            <label class="inline-flex items-center gap-2" v-for="t in portTypeOptions" :key="'ptype_'+t.value">
-              <input type="checkbox" class="rounded"
-                     :checked="filters.portTypes.has(t.value)"
-                     :disabled="!availability.portTypes.has(t.value)"
-                     @change="toggleSet(filters.portTypes, t.value)" />
-              <span :class="{'text-slate-500': !availability.portTypes.has(t.value)}">{{ t.label }}</span>
-            </label>
-          </div>
-        </div>
+               <!-- Port type (⚠️ ligne corrigée :key) -->
 
         <!-- Buckets de ports -->
         <div>
