--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cisco Unified Product Selector — Démo</title>
-  <!-- UI: Tailwind (CDN, OK pour Pages) -->
+  <title>Cisco Unified Product Selector — GitHub Pages</title>
+  <!-- UI: Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Vue 3 (CDN) -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
@@ -13,8 +13,8 @@
 <body class="bg-slate-900 text-slate-100">
   <header class="sticky top-0 z-10 border-b border-slate-800 bg-slate-950/80 backdrop-blur px-4 py-3">
     <div class="max-w-7xl mx-auto flex items-center justify-between">
-      <h1 class="text-base font-semibold">Cisco Unified Product Selector — Démo</h1>
-      <p class="text-xs text-slate-400">No‑zero results · GitHub Pages ready</p>
+      <h1 class="text-base font-semibold">Cisco Unified Product Selector</h1>
+      <p class="text-xs text-slate-400">GitHub Pages · fetch('data/products.json')</p>
     </div>
   </header>
 
@@ -23,7 +23,7 @@
     <aside class="bg-slate-950 border border-slate-800 rounded-xl p-4 space-y-5">
       <h2 class="text-sm font-semibold text-sky-300">Port configuration</h2>
 
-      <!-- Downlink -->
+      <!-- DOWNLINK -->
       <section class="space-y-3">
         <h3 class="text-sm font-semibold text-slate-200">Downlink ports</h3>
 
@@ -75,7 +75,7 @@
 
       <hr class="border-slate-800" />
 
-      <!-- Uplinks -->
+      <!-- UPLINKS -->
       <section class="space-y-3">
         <h3 class="text-sm font-semibold text-slate-200">Uplink ports</h3>
 
@@ -126,7 +126,7 @@
       </section>
 
       <div class="pt-2 flex items-center justify-between text-xs text-slate-400">
-        <span><strong class="text-slate-100 text-sm">{{ results.length }}</strong> switches correspond to your request</span>
+        <span><strong class="text-slate-100 text-sm">{{ results.length }}</strong> switches</span>
         <button @click="reset" class="px-3 py-1.5 rounded-lg border border-slate-700 bg-slate-900 text-sm">Reset</button>
       </div>
     </aside>
@@ -134,14 +134,15 @@
     <!-- Résultats -->
     <section class="bg-slate-950 border border-slate-800 rounded-xl p-3">
       <h2 class="text-sm font-semibold text-sky-300 mb-3">Results</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
+      <div v-if="loading" class="text-sm text-slate-400 p-3">Loading products…</div>
+      <div v-else class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
         <article v-for="p in results" :key="p.sku" class="bg-slate-900 border border-slate-800 rounded-xl p-3 space-y-2">
           <h3 class="text-sm font-semibold">{{ p.name }}</h3>
           <div class="flex flex-wrap gap-2 text-xs">
             <span class="px-2 py-0.5 rounded-full border border-slate-700">{{ p.family }} · {{ p.series }}</span>
             <span class="px-2 py-0.5 rounded-full border border-slate-700">{{ p.downlink.throughput }} · {{ p.downlink.type }}</span>
             <span class="px-2 py-0.5 rounded-full border border-slate-700">{{ p.ports_access }} ports</span>
-            <span class="px-2 py-0.5 rounded-full border border-slate-700">Uplinks: {{ p.uplink.types.join('/') }} · {{ p.uplink.count }}</span>
+            <span class="px-2 py-0.5 rounded-full border border-slate-700">Uplinks: {{ (p.uplink?.types||[]).join('/') }} · {{ p.uplink?.count ?? '—' }}</span>
             <span class="px-2 py-0.5 rounded-full border border-slate-700">{{ p.os }}</span>
           </div>
           <p class="text-[11px] text-slate-500">SKU: {{ p.sku }}</p>
@@ -151,45 +152,14 @@
   </main>
 
   <script>
-  const { createApp, reactive, computed } = Vue;
+  const { createApp, ref, reactive, computed, onMounted } = Vue;
 
-  // --- Données démo (remplace par ton export JSON) ---
-  const PRODUCTS = [
-    // Catalyst
-    { sku:'C9200-24P-E', name:'Catalyst 9200 24P PoE+', family:'Catalyst', series:'C9200',
-      ports_access:24, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP'], count:4, modular:false, throughput:['1G'] }, os:'IOS-XE' },
-    { sku:'C9300-24U-E', name:'Catalyst 9300 24U UPOE', family:'Catalyst', series:'C9300',
-      ports_access:24, downlink:{ throughput:'mGig', type:'Copper' },
-      uplink:{ types:['SFP+'], count:4, modular:true, throughput:['10G'] }, os:'IOS-XE' },
-    { sku:'C9300-48T-E', name:'Catalyst 9300 48T Data', family:'Catalyst', series:'C9300',
-      ports_access:48, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP+'], count:4, modular:false, throughput:['10G'] }, os:'IOS-XE' },
-    // Meraki
-    { sku:'MS225-24P-HW', name:'Meraki MS225-24P', family:'Meraki', series:'MS225',
-      ports_access:24, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP+'], count:4, modular:false, throughput:['10G'] }, os:'Meraki OS' },
-    { sku:'MS390-24UX-HW', name:'Meraki MS390-24UX', family:'Meraki', series:'MS390',
-      ports_access:24, downlink:{ throughput:'mGig', type:'Copper' },
-      uplink:{ types:['SFP+'], count:4, modular:true, throughput:['10G'] }, os:'Meraki OS' },
-    { sku:'MS120-8LP-HW', name:'Meraki MS120-8LP', family:'Meraki', series:'MS120',
-      ports_access:8, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP'], count:2, modular:false, throughput:['1G'] }, os:'Meraki OS' },
-    // Small Business
-    { sku:'CBS350-24P-4X', name:'Business 350 24P-4X', family:'Small Business', series:'CBS350',
-      ports_access:24, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP+'], count:4, modular:false, throughput:['10G'] }, os:'Business OS' },
-    { sku:'CBS220-8T-2G', name:'Business 220 8T-2G', family:'Small Business', series:'CBS220',
-      ports_access:8, downlink:{ throughput:'GE', type:'Copper' },
-      uplink:{ types:['SFP'], count:2, modular:false, throughput:['1G'] }, os:'Business OS' }
-  ];
-
-  // Options affichées
+  // Options affichées (adapter si besoin)
   const throughputOptions = [
-    { value:'FE', label:'Fast Ethernet (FE)' },
-    { value:'GE', label:'Gigabit Ethernet (GE)' },
+    { value:'FE',   label:'Fast Ethernet (FE)' },
+    { value:'GE',   label:'Gigabit Ethernet (GE)' },
     { value:'mGig', label:'Multi Gigabit Ethernet (mGig)' },
-    { value:'10G', label:'10 Gigabits' } // cas châssis/linecards
+    { value:'10G',  label:'10 Gigabits' } // cas châssis/linecards si présent dans ton JSON
   ];
   const portTypeOptions = [
     { value:'Copper', label:'Copper' },
@@ -210,67 +180,74 @@
     { key:'32_48',  label:'32–48', matches:n=>n>=32 && n<=48 }
   ];
 
-  // --- App ---
   createApp({
     setup(){
-      // Par défaut: AUCUN filtre actif
+      const PRODUCTS = ref([]);
+      const loading = ref(true);
+
+      // Filtres neutres (rien de coché par défaut)
       const filters = reactive({
-        lan: new Set(),          // FE/GE/mGig/10G (downlink) - vide = pas de filtre
+        lan: new Set(),          // FE/GE/mGig/10G
         portTypes: new Set(),    // Copper/Fiber
-        lanPorts: null,          // bucket clé ou null
-        uplinks: new Set(),      // GE/mGig/10G/25G/...
-        modular: null,           // null = indifférent, true = modulaires uniquement
+        lanPorts: null,          // bucket
+        uplinks: new Set(),      // GE/mGig/10G/25G/40G/100G
+        modular: null,           // null = indifférent, true = requis
         numUplinks: null         // null = indifférent, sinon nombre exact
       });
 
-      // Filtrage générique en fonction d'un "state" passé (utile pour simuler)
+      onMounted(async () => {
+        try {
+          const res = await fetch('data/products.json', { cache:'no-store' });
+          PRODUCTS.value = await res.json();
+        } catch (e) {
+          console.error('Erreur de chargement du JSON:', e);
+          PRODUCTS.value = []; // évite crash UI
+        } finally {
+          loading.value = false;
+        }
+      });
+
+      // Filtrage générique
       function computeResults(state){
-        return PRODUCTS.filter(p => {
-          // Downlink throughput
-          if(state.lan.size && !state.lan.has(p.downlink.throughput)) return false;
-          // Port type
-          if(state.portTypes.size && !state.portTypes.has(p.downlink.type)) return false;
-          // Ports bucket
+        return PRODUCTS.value.filter(p => {
+          if(state.lan.size && !state.lan.has(p.downlink?.throughput)) return false;
+          if(state.portTypes.size && !state.portTypes.has(p.downlink?.type)) return false;
           if(state.lanPorts){
-            const bucket = portBuckets.find(b => b.key === state.lanPorts);
-            if(bucket && !bucket.matches(p.ports_access)) return false;
+            const b = portBuckets.find(x => x.key === state.lanPorts);
+            if(b && !b.matches(p.ports_access||0)) return false;
           }
-          // Uplink throughput (produit: p.uplink.throughput = ['1G','10G',...])
           if(state.uplinks.size){
-            const ok = p.uplink.throughput.some(t => state.uplinks.has(t));
+            const ups = p.uplink?.throughput || [];
+            const ok = ups.some(t => state.uplinks.has(t));
             if(!ok) return false;
           }
-          // Modular
-          if(state.modular === true && !p.uplink.modular) return false;
-          // Num uplinks exact
-          if(state.numUplinks!==null && p.uplink.count !== state.numUplinks) return false;
+          if(state.modular === true && !p.uplink?.modular) return false;
+          if(state.numUplinks!==null && (p.uplink?.count !== state.numUplinks)) return false;
           return true;
         });
       }
 
-      // Résultats courants (avec les filtres actifs)
       const results = computed(() => computeResults(filters));
 
-      // Disponibilités (ce qui reste possible compte tenu des filtres actifs)
+      // Disponibilités dynamiques (pour griser les options impossibles)
       const availability = computed(() => {
-        // On se base sur les résultats *courants* (qui ne doivent jamais être 0
-        // car on bloque les actions qui mèneraient à 0). Si jamais 0 (premier chargement
-        // ou bug), on retombe sur tout le catalogue pour éviter de bloquer l'UI.
-        const base = results.value.length ? results.value : PRODUCTS;
+        // Base = résultats courants ; si 0 (au tout début ou si bug),
+        // on retombe sur tout le catalogue pour ne jamais bloquer l'UI.
+        const base = results.value.length ? results.value : PRODUCTS.value;
 
-        const lan = new Set(base.map(p => p.downlink.throughput));
-        const portTypes = new Set(base.map(p => p.downlink.type));
+        const lan = new Set(base.map(p => p.downlink?.throughput).filter(Boolean));
+        const portTypes = new Set(base.map(p => p.downlink?.type).filter(Boolean));
         const lanPorts = new Set(
-          portBuckets.filter(b => base.some(p => b.matches(p.ports_access))).map(b => b.key)
+          portBuckets.filter(b => base.some(p => b.matches(p.ports_access||0))).map(b => b.key)
         );
-        const uplinks = new Set(base.flatMap(p => p.uplink.throughput));
-        const numUplinks = new Set(base.map(p => p.uplink.count));
-        const modularTrue = base.some(p => p.uplink.modular);
+        const uplinks = new Set(base.flatMap(p => p.uplink?.throughput || []));
+        const numUplinks = new Set(base.map(p => p.uplink?.count).filter(v => v!==undefined));
+        const modularTrue = base.some(p => p.uplink?.modular);
 
         return { lan, portTypes, lanPorts, uplinks, numUplinks, modularTrue };
       });
 
-      // --- Handlers avec "no-zero" pre-check ---
+      // Handlers “no‑zero” (on simule avant d’appliquer)
       function cloneState(){
         return {
           lan: new Set(filters.lan),
@@ -281,45 +258,31 @@
           numUplinks: filters.numUplinks
         };
       }
-
       function tryToggleSet(key, value){
         const next = cloneState();
-        const set = next[key];
-        if(set.has(value)) set.delete(value); else set.add(value);
-
-        const would = computeResults(next);
-        if(would.length === 0) return; // on bloque: mènerait à 0
-        // commit
-        filters[key].has(value) ? filters[key].delete(value) : filters[key].add(value);
+        const set = next[key]; set.has(value)?set.delete(value):set.add(value);
+        if (computeResults(next).length===0) return; // bloqué: mènerait à 0
+        filters[key].has(value)?filters[key].delete(value):filters[key].add(value);
       }
-
       function trySelect(key, value){
         const next = cloneState();
-        next[key] = (next[key] === value ? null : value); // clic = select/deselect bucket
-        const would = computeResults(next);
-        if(would.length === 0) return; // bloque
-        filters[key] = (filters[key] === value ? null : value);
+        next[key] = (next[key]===value ? null : value);
+        if (computeResults(next).length===0) return;
+        filters[key] = (filters[key]===value ? null : value);
       }
-
       function tryToggleBoolean(key){
         const next = cloneState();
-        next[key] = next[key] === true ? null : true;  // null <-> true (indifférent / requis)
-        const would = computeResults(next);
-        if(would.length === 0) return; // bloque
-        filters[key] = (filters[key] === true ? null : true);
+        next[key] = (next[key]===true ? null : true); // null <-> true
+        if (computeResults(next).length===0) return;
+        filters[key] = (filters[key]===true ? null : true);
       }
-
       function reset(){
-        filters.lan.clear();
-        filters.portTypes.clear();
-        filters.uplinks.clear();
-        filters.lanPorts = null;
-        filters.modular = null;
-        filters.numUplinks = null;
+        filters.lan.clear(); filters.portTypes.clear(); filters.uplinks.clear();
+        filters.lanPorts = null; filters.modular = null; filters.numUplinks = null;
       }
 
       return {
-        filters, results, availability,
+        loading, results, availability, filters,
         throughputOptions, portTypeOptions, uplinkThroughputOptions, portBuckets,
         tryToggleSet, trySelect, tryToggleBoolean, reset
       };
